--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.36"
 psycopg2-binary = "^2.9.10"
 databases = "^0.9.0"
 asyncpg = "^0.30.0"
+authx = "^1.4.0"
 
 
 [build-system]
