--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.10"
 databases = "^0.9.0"
 asyncpg = "^0.30.0"
 authx = "^1.4.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
